--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trang Chính</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <!-- Skip to main content -->
-  <a href="#main-content" class="skip-link">Bỏ qua đến nội dung chính</a>
+  <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
   <header>
     <nav>
-      <img src="logo.png" alt="Logo trang web">
-      <!-- menu -->
+      <img src="logo.png" alt="Website logo" />
       <ul>
-        <li><a href="index.html">Trang Chủ</a></li>
-        <li><a href="parks.html">Công Viên</a></li>
-        <li><a href="about.html">Giới Thiệu</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="parks.html">Parks</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
 
   <main id="main-content">
-    <h1>Chào mừng bạn đến với trang web</h1>
+    <h1>Welcome to Our Website</h1>
 
     <section class="grid">
       <div>
-        <img src="image1.jpg" alt="Hình 1">
-        <p>Nội dung hình 1</p>
+        <img src="image1.jpg" alt="Image 1" />
+        <p>Content for image 1.</p>
       </div>
       <div>
-        <img src="image2.jpg" alt="Hình 2">
-        <p>Nội dung hình 2</p>
+        <img src="image2.jpg" alt="Image 2" />
+        <p>Content for image 2.</p>
       </div>
     </section>
 
     <section class="flex">
-      <div><p>Khối 1</p></div>
-      <div><p>Khối 2</p></div>
-      <div><p>Khối 3</p></div>
+      <div><p>Box 1</p></div>
+      <div><p>Box 2</p></div>
+      <div><p>Box 3</p></div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Trang web của tôi</p>
+    <p>&copy; 2025 My Website</p>
   </footer>
 </body>
 </html>
