--- a/parks.html
+++ b/parks.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Các Công Viên</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Parks</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Skip to main content -->
-  <a href="#main-content" class="skip-link">Bỏ qua đến nội dung chính</a>
+  <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
   <header>
     <nav>
-      <img src="logo.png" alt="Logo trang web">
+      <img src="logo.png" alt="Website logo" />
       <ul>
-        <li><a href="index.html">Trang Chủ</a></li>
-        <li><a href="parks.html">Công Viên</a></li>
-        <li><a href="about.html">Giới Thiệu</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="parks.html">Parks</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
 
   <main id="main-content">
-    <h1>Khám phá các công viên nổi bật</h1>
+    <h1>Explore Top Parks</h1>
 
     <section class="grid">
       <div>
-        <img src="park1.jpg" alt="Công viên A">
-        <p>Công viên A - Không gian xanh mát, lý tưởng cho gia đình.</p>
+        <img src="park1.jpg" alt="Park A" />
+        <p>Park A - A peaceful green space for families.</p>
       </div>
       <div>
-        <img src="park2.jpg" alt="Công viên B">
-        <p>Công viên B - Đường chạy bộ và khu picnic rộng rãi.</p>
+        <img src="park2.jpg" alt="Park B" />
+        <p>Park B - Jogging trails and wide picnic areas.</p>
       </div>
     </section>
 
     <section class="flex">
-      <div><p>Khu vui chơi trẻ em</p></div>
-      <div><p>Hồ nước & thuyền</p></div>
-      <div><p>Vườn hoa</p></div>
+      <div><p>Kids Playground</p></div>
+      <div><p>Lake & Boats</p></div>
+      <div><p>Flower Garden</p></div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Trang web của tôi</p>
+    <p>&copy; 2025 My Website</p>
   </footer>
 </body>
 </html>
