--- a/about.html
+++ b/about.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giới Thiệu</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Skip to main content -->
-  <a href="#main-content" class="skip-link">Bỏ qua đến nội dung chính</a>
+  <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
   <header>
     <nav>
-      <img src="logo.png" alt="Logo trang web">
+      <img src="logo.png" alt="Website logo" />
       <ul>
-        <li><a href="index.html">Trang Chủ</a></li>
-        <li><a href="parks.html">Công Viên</a></li>
-        <li><a href="about.html">Giới Thiệu</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="parks.html">Parks</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
 
   <main id="main-content">
-    <h1>Về Chúng Tôi</h1>
+    <h1>About Us</h1>
 
     <section class="grid">
       <div>
-        <img src="team.jpg" alt="Nhóm phát triển">
-        <p>Chúng tôi là nhóm sinh viên đam mê phát triển web và xây dựng trải nghiệm người dùng thân thiện.</p>
+        <img src="team.jpg" alt="Our Team" />
+        <p>We are a group of students passionate about web development and building user-friendly experiences.</p>
       </div>
       <div>
-        <img src="mission.jpg" alt="Sứ mệnh">
-        <p>Sứ mệnh của chúng tôi là giúp mọi người tiếp cận không gian xanh và sống lành mạnh hơn.</p>
+        <img src="mission.jpg" alt="Our Mission" />
+        <p>Our mission is to help people access green spaces and live healthier lives.</p>
       </div>
     </section>
 
     <section class="flex">
-      <div><p>Liên hệ</p></div>
-      <div><p>Tài nguyên</p></div>
-      <div><p>Đối tác</p></div>
+      <div><p>Contact</p></div>
+      <div><p>Resources</p></div>
+      <div><p>Partners</p></div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Trang web của tôi</p>
+    <p>&copy; 2025 My Website</p>
   </footer>
 </body>
 </html>
