--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <nav>
-      <img src="logo.png" alt="Website logo" />
+      <img src="images/logo.png" alt="Website logo" />
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="parks.html">Parks</a></li>
@@ -25,17 +25,23 @@
   <main id="main-content">
     <h1>Welcome to Our Website</h1>
 
+    <!-- Grid section with videos instead of images -->
     <section class="grid">
       <div>
-        <img src="image1.jpg" alt="Image 1" />
-        <p>Content for image 1.</p>
+        <video src="videos/video1.mp4" controls autoplay muted loop width="100%">
+          Your browser does not support the video tag.
+        </video>
+        <p>Content for video 1.</p>
       </div>
       <div>
-        <img src="image2.jpg" alt="Image 2" />
-        <p>Content for image 2.</p>
+        <video src="videos/video2.mp4" controls autoplay muted loop width="100%">
+          Your browser does not support the video tag.
+        </video>
+        <p>Content for video 2.</p>
       </div>
     </section>
 
+    <!-- Flexbox section -->
     <section class="flex">
       <div><p>Box 1</p></div>
       <div><p>Box 2</p></div>
