--- a/parks.html
+++ b/parks.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
+  <!-- Skip to main content -->
   <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
   <header>
     <nav>
-      <img src="logo.png" alt="Website logo" />
+      <img src="images/logo.png" alt="Website logo" />
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="parks.html">Parks</a></li>
@@ -22,28 +23,29 @@
   </header>
 
   <main id="main-content">
-    <h1>Explore Top Parks</h1>
+    <h1>Our Favorite Parks</h1>
 
     <section class="grid">
       <div>
-        <img src="park1.jpg" alt="Park A" />
-        <p>Park A - A peaceful green space for families.</p>
+        <img src="images/park1.jpg" alt="Park 1" />
+        <p>Green Park – a peaceful escape in the city.</p>
       </div>
       <div>
-        <img src="park2.jpg" alt="Park B" />
-        <p>Park B - Jogging trails and wide picnic areas.</p>
+        <img src="images/park2.jpg" alt="Park 2" />
+        <p>Sunset Park – perfect views and trails.</p>
       </div>
     </section>
 
     <section class="flex">
-      <div><p>Kids Playground</p></div>
-      <div><p>Lake & Boats</p></div>
-      <div><p>Flower Garden</p></div>
+      <div><p>Nature</p></div>
+      <div><p>Wildlife</p></div>
+      <div><p>Activities</p></div>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 My Website</p>
   </footer>
+
 </body>
 </html>
