--- a/about.html
+++ b/about.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
+  <!-- Skip to main content -->
   <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
   <header>
     <nav>
-      <img src="logo.png" alt="Website logo" />
+      <img src="images/logo.png" alt="Website logo" />
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="parks.html">Parks</a></li>
@@ -26,24 +27,19 @@
 
     <section class="grid">
       <div>
-        <img src="team.jpg" alt="Our Team" />
-        <p>We are a group of students passionate about web development and building user-friendly experiences.</p>
+        <img src="images/team.jpg" alt="Our team" />
+        <p>We are passionate about nature and creating beautiful park experiences for everyone.</p>
       </div>
       <div>
-        <img src="mission.jpg" alt="Our Mission" />
-        <p>Our mission is to help people access green spaces and live healthier lives.</p>
+        <video src="videos/about-video.mp4" controls></video>
+        <p>Watch our story and how we started.</p>
       </div>
-    </section>
-
-    <section class="flex">
-      <div><p>Contact</p></div>
-      <div><p>Resources</p></div>
-      <div><p>Partners</p></div>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 My Website</p>
   </footer>
+
 </body>
 </html>
