--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
         <p>We are passionate about nature and creating beautiful park experiences for everyone.</p>
       </div>
       <div>
-        <video src="videos/about-video.mp4" controls></video>
-        <p>Watch our story and how we started.</p>
+        <img src="images/mission.jpg" alt="Our mission" />
+        <p>Working together toward success.</p>
       </div>
     </section>
   </main>
